# eat-opencv-in-21-days

./: README.md
Histograms_Matching/: calcHist_Demo.cpp  compareHist.cpp  compareHist.md
ImgPro/: ContrastImageCorrection.cpp  Morphologpy.cpp  README.md  Retinex_MSRCR.cpp  SeperatedGaussianFilter.cpp  Smooth.cpp  basicLinearTransforms.cpp  changing_contrast_brightness_image.cpp  periodic_noise_removing_filter.cpp  threshold.cpp
ImgPro/HitMiss/: HitMiss.cpp  HitMiss.md
ImgPro/Pyramids/: Pyramids.cpp
Introduction/: displayImage.cpp  documentations.cpp  introduction_windows_vs.cpp
core/: AddingImages.cpp  discrete_fourier_transform.cpp  file_input_output.cpp  how_to_scan_image.cpp  load_image_from_buffer.cpp  mat_mask_operations.cpp  mat_operation.cpp  mat_the_basic_image_containner.cpp
task/VideoStablization/: CMakeLists.txt  README.md  main.cpp
