cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET(CMAKE_CXX_COMPLIER "/usr/bin/g++")
project (videostable)
set (OpenCV_DIR "/usr/local/Cellar/opencv/4.4.0/include/opencv4")
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable(videostable main.cpp videostab.cpp)
target_link_libraries(videostable ${OpenCV_LIBS})
